// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateProxies should include both polyfills and definCustomElements when both are true in the outputTarget 1`] = `
"/* eslint-disable */
/* tslint:disable */
// @ts-nocheck
import { applyPolyfills, defineCustomElements } from 'component-library/dist/loader';

applyPolyfills().then(() => defineCustomElements());

"
`;

exports[`generateProxies should include only defineCustomElements when includePolyfills is false in the outputTarget 1`] = `
"/* eslint-disable */
/* tslint:disable */
// @ts-nocheck
import { defineCustomElements } from 'component-library/dist/loader';

defineCustomElements();

"
`;

exports[`generateProxies should not include defineCustomElements or applyPolyfills if both are false in the outputTarget 1`] = `
"/* eslint-disable */
/* tslint:disable */
// @ts-nocheck
import 'component-library/dist/loader';


"
`;
